# similarity_service_case_study

./: .gitignore  README.md  pyproject.toml
data/chained/: chain_ground_truth.json  chain_test_prompts.json  eval_chain.py
data/clusters/: eval.py  ground_truth.json  prompts_1000_with_dups.json
data/semantic_accuracy/: calibration.py
data/similarity/: edge_case_prompts.json  eval_sheet.xlsx  prompts_500.json
src/prompt_similarity/: __init__.py  app.py  app_state.py  cache.py  cli.py  clustering.py  config.py  db.py  embeddings.py  models.py  search.py  streamlit_app.py
src/prompt_similarity/routes/: analysis.py  embeddings.py  health.py  search.py
tests/: __init__.py  test_cache.py  test_clustering.py  test_db.py  test_embeddings.py  test_routes.py  test_search.py
